exports[`no-unawaited-promise-assertion > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(1): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(10): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(undefined, error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(undefined, error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(10): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(undefined, error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(undefined, error => { assert.ifError(error); });
    | 	                                  ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(undefined, error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(11): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().catch(error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(11): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().catch(error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().catch(error => { assert.ifError(error); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`catch()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().finally(() => { assert.ok(cleanedUp); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().finally(() => { assert.ok(cleanedUp); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(12): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().finally(() => { assert.ok(cleanedUp); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().finally(() => { assert.ok(cleanedUp); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`finally()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().finally(() => { assert.ok(cleanedUp); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(13): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(13): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(13): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });\n}); 3`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
    | 	                                                                          ^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`catch()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); }).catch(error => { assert.ifError(error); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.ok(value); assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(14): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert.ok(value); assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.ok(value); assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(15): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tpromise?.then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	promise?.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(15): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tpromise?.then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	promise?.then(value => { assert.strictEqual(value, 42); });
    | 	                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await promise?.then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload?.().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load?.().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(16): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload?.().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load?.().then(value => { assert.strictEqual(value, 42); });
    | 	                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load?.().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tvoid load().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	void load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(17): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tvoid load().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	void load().then(value => { assert.strictEqual(value, 42); });
    | 	                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(18): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(19): import {before} from 'node:test';\nimport assert from 'node:assert';\nbefore(async () => {\n\tsetup().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
  4 | 	setup().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(19): import {before} from 'node:test';\nimport assert from 'node:assert';\nbefore(async () => {\n\tsetup().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
> 4 | 	setup().then(value => { assert.strictEqual(value, 42); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {before} from 'node:test';
  2 | import assert from 'node:assert';
  3 | before(async () => {
  4 | 	await setup().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(2): import * as nodeTest from 'node:test';\nimport assert from 'node:assert';\nnodeTest.test('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(2): import * as nodeTest from 'node:test';\nimport assert from 'node:assert';\nnodeTest.test('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import * as nodeTest from 'node:test';
  2 | import assert from 'node:assert';
  3 | nodeTest.test('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(20): import {beforeEach} from 'node:test';\nbeforeEach(async t => {\n\tsetup().then(value => { t.assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
  3 | 	setup().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(20): import {beforeEach} from 'node:test';\nbeforeEach(async t => {\n\tsetup().then(value => { t.assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
> 3 | 	setup().then(value => { t.assert.strictEqual(value, 42); });
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(async t => {
  3 | 	await setup().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(21): import {afterEach} from 'node:test';\nimport assert from 'node:assert';\nafterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
  4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(21): import {afterEach} from 'node:test';\nimport assert from 'node:assert';\nafterEach(async () => {\n\tteardown().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
> 4 | 	teardown().then(value => { assert.strictEqual(value, 42); });
    | 	                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {afterEach} from 'node:test';
  2 | import assert from 'node:assert';
  3 | afterEach(async () => {
  4 | 	await teardown().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', async t => {\n\tawait t.test('child', async () => {\n\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
  5 | 		load().then(value => { assert.strictEqual(value, 42); });
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(22): import test from 'node:test';\nimport assert from 'node:assert';\ntest('parent', async t => {\n\tawait t.test('child', async () => {\n\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t});\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
> 5 | 		load().then(value => { assert.strictEqual(value, 42); });
    | 		                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  6 | 	});
  7 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('parent', async t => {
  4 | 	await t.test('child', async () => {
  5 | 		await load().then(value => { assert.strictEqual(value, 42); });
  6 | 	});
  7 | });

`;

exports[`no-unawaited-promise-assertion > invalid(23): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tclass Fixture {\n\t\tstatic {\n\t\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	class Fixture {
  5 | 		static {
  6 | 			load().then(value => { assert.strictEqual(value, 42); });
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-unawaited-promise-assertion > invalid(23): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tclass Fixture {\n\t\tstatic {\n\t\t\tload().then(value => { assert.strictEqual(value, 42); });\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	class Fixture {
  5 | 		static {
> 6 | 			load().then(value => { assert.strictEqual(value, 42); });
    | 			                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-unawaited-promise-assertion > invalid(24): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(24): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); }) as (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(25): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(25): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); }) satisfies (value: number) => void);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(26): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); })!);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then((value => { assert.strictEqual(value, 42); })!);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(26): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then((value => { assert.strictEqual(value, 42); })!);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then((value => { assert.strictEqual(value, 42); })!);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then((value => { assert.strictEqual(value, 42); })!);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(27): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(27): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\t(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	(load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);
    | 	                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	(await load().then(value => { assert.strictEqual(value, 42); }) as Promise<void>);
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(28): import test from 'node:test';\nimport assert from 'node:assert';\n(test as typeof test)('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(28): import test from 'node:test';\nimport assert from 'node:assert';\n(test as typeof test)('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | (test as typeof test)('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => assert.strictEqual(value, 42));\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => assert.strictEqual(value, 42));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => assert.strictEqual(value, 42));\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => assert.strictEqual(value, 42));
    | 	                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => assert.strictEqual(value, 42));
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert(value); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert(value); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(4): import test from 'node:test';\nimport assert from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { assert(value); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert(value); });
    | 	                       ^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert(value); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(5): import {it} from 'node:test';\nimport assert from 'node:assert';\nit('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
  4 | 	load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(5): import {it} from 'node:test';\nimport assert from 'node:assert';\nit('loads', async () => {\n\tload().then(value => { assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
> 4 | 	load().then(value => { assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import {it} from 'node:test';
  2 | import assert from 'node:assert';
  3 | it('loads', async () => {
  4 | 	await load().then(value => { assert.strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(6): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('loads', async () => {\n\tload().then(value => { assert.equal(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
  4 | 	load().then(value => { assert.equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(6): import test from 'node:test';\nimport assert from 'node:assert/strict';\ntest('loads', async () => {\n\tload().then(value => { assert.equal(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { assert.equal(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert/strict';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { assert.equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(7): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(7): import test from 'node:test';\nimport {strictEqual} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import {strictEqual} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { strictEqual(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(8): import test from 'node:test';\nimport {strictEqual as equal} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { equal(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	load().then(value => { equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(8): import test from 'node:test';\nimport {strictEqual as equal} from 'node:assert';\ntest('loads', async () => {\n\tload().then(value => { equal(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
> 4 | 	load().then(value => { equal(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import {strictEqual as equal} from 'node:assert';
  3 | test('loads', async () => {
  4 | 	await load().then(value => { equal(value, 42); });
  5 | });

`;

exports[`no-unawaited-promise-assertion > invalid(9): import test from 'node:test';\ntest('loads', async t => {\n\tload().then(value => { t.assert.strictEqual(value, 42); });\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test('loads', async t => {
  3 | 	load().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;

exports[`no-unawaited-promise-assertion > invalid(9): import test from 'node:test';\ntest('loads', async t => {\n\tload().then(value => { t.assert.strictEqual(value, 42); });\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test('loads', async t => {
> 3 | 	load().then(value => { t.assert.strictEqual(value, 42); });
    | 	                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Assertion in a floating \`then()\` callback is not awaited by the test. Await or return the Promise chain.
  4 | });

Output:
  1 | import test from 'node:test';
  2 | test('loads', async t => {
  3 | 	await load().then(value => { t.assert.strictEqual(value, 42); });
  4 | });

`;
